--- a/recipes-client/package.json
+++ b/recipes-client/package.json
@@ -18,9 +18,12 @@
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
+    "@angular/localize": "~10.1.3",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
